--- a/server/microservices/auth/package.json
+++ b/server/microservices/auth/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "axios": "^1.7.9",
