--- a/server/microservices/orders/package.json
+++ b/server/microservices/orders/package.json
@@ -11,5 +11,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "axios": "^1.7.9",
+    "jest": "^29.7.0"
   }
 }
