--- a/server/microservices/users/package.json
+++ b/server/microservices/users/package.json
@@ -7,6 +7,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "axios": "^1.7.9",
+    "jest": "^29.7.0"
   }
 }
